<?xml version="1.0" encoding="utf-8"?><!DOCTYPE androidx.constraintlayout.widget.ConstraintLayout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/unnamed"
    tools:context=".MainActivity">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/LabelInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/LabelOut"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/textViewInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="50dp"
                android:background="#FFFFFF"
                android:focusable="auto"
                android:gravity="clip_vertical"
                android:hint="@string/InputField"
                android:inputType="textMultiLine|textNoSuggestions"
                android:isScrollContainer="false"
                android:imeOptions="flagNoExtractUi" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonEncode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/gt_gt"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonDecode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="75dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/lt_lt"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/LabelOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/LabelIn"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/textViewOutput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="50dp"
                android:background="#FFFFFF"
                android:digits="0,1"
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:gravity="clip_vertical"
                android:hint="@string/FieldOutput"
                android:inputType="textMultiLine|number"
                android:imeOptions="flagNoExtractUi" />
        </LinearLayout>

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>